// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds admin get record view gets a record by uri and cid. 1`] = `
Object {
  "blobCids": Array [],
  "blobs": Array [],
  "cid": "cids(0)",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "moderation": Object {
    "actions": Array [
      Object {
        "action": "com.atproto.admin.defs#takedown",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "id": 3,
        "reason": "X",
        "resolvedReportIds": Array [],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
        "subjectBlobCids": Array [],
      },
      Object {
        "action": "com.atproto.admin.defs#acknowledge",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "id": 2,
        "reason": "X",
        "resolvedReportIds": Array [],
        "reversal": Object {
          "createdAt": "1970-01-01T00:00:00.000Z",
          "createdBy": "did:example:admin",
          "reason": "X",
        },
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
        "subjectBlobCids": Array [],
      },
    ],
    "currentAction": Object {
      "action": "com.atproto.admin.defs#takedown",
      "id": 3,
    },
    "reports": Array [
      Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "id": 2,
        "reason": "defamation",
        "reasonType": "com.atproto.moderation.defs#reasonOther",
        "reportedBy": "user(1)",
        "resolvedByActionIds": Array [],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
      },
      Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "id": 1,
        "reasonType": "com.atproto.moderation.defs#reasonSpam",
        "reportedBy": "user(2)",
        "resolvedByActionIds": Array [],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
      },
    ],
  },
  "repo": Object {
    "account": Object {
      "email": "alice@test.com",
    },
    "did": "user(0)",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {},
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(1)",
          },
          "size": 3976,
        },
        "description": "its me!",
        "displayName": "ali",
      },
    ],
  },
  "uri": "record(0)",
  "value": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "text": "hey there",
  },
}
`;

exports[`pds admin get record view gets a record by uri, even when taken down. 1`] = `
Object {
  "blobCids": Array [],
  "blobs": Array [],
  "cid": "cids(0)",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "moderation": Object {
    "actions": Array [
      Object {
        "action": "com.atproto.admin.defs#takedown",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "id": 3,
        "reason": "X",
        "resolvedReportIds": Array [],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
        "subjectBlobCids": Array [],
      },
      Object {
        "action": "com.atproto.admin.defs#acknowledge",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "id": 2,
        "reason": "X",
        "resolvedReportIds": Array [],
        "reversal": Object {
          "createdAt": "1970-01-01T00:00:00.000Z",
          "createdBy": "did:example:admin",
          "reason": "X",
        },
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
        "subjectBlobCids": Array [],
      },
    ],
    "currentAction": Object {
      "action": "com.atproto.admin.defs#takedown",
      "id": 3,
    },
    "reports": Array [
      Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "id": 2,
        "reason": "defamation",
        "reasonType": "com.atproto.moderation.defs#reasonOther",
        "reportedBy": "user(1)",
        "resolvedByActionIds": Array [],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
      },
      Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "id": 1,
        "reasonType": "com.atproto.moderation.defs#reasonSpam",
        "reportedBy": "user(2)",
        "resolvedByActionIds": Array [],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
      },
    ],
  },
  "repo": Object {
    "account": Object {
      "email": "alice@test.com",
    },
    "did": "user(0)",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {},
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(1)",
          },
          "size": 3976,
        },
        "description": "its me!",
        "displayName": "ali",
      },
    ],
  },
  "uri": "record(0)",
  "value": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "text": "hey there",
  },
}
`;

exports[`pds admin get record view serves labels. 1`] = `
Object {
  "blobCids": Array [],
  "blobs": Array [],
  "cid": "cids(0)",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [
    Object {
      "cid": "cids(0)",
      "cts": "1970-01-01T00:00:00.000Z",
      "neg": false,
      "src": "did:example:labeler",
      "uri": "record(0)",
      "val": "kittens",
    },
    Object {
      "cid": "cids(0)",
      "cts": "1970-01-01T00:00:00.000Z",
      "neg": false,
      "src": "did:example:labeler",
      "uri": "record(0)",
      "val": "puppies",
    },
  ],
  "moderation": Object {
    "actions": Array [
      Object {
        "action": "com.atproto.admin.defs#takedown",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "id": 3,
        "reason": "X",
        "resolvedReportIds": Array [],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
        "subjectBlobCids": Array [],
      },
      Object {
        "action": "com.atproto.admin.defs#acknowledge",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "id": 2,
        "reason": "X",
        "resolvedReportIds": Array [],
        "reversal": Object {
          "createdAt": "1970-01-01T00:00:00.000Z",
          "createdBy": "did:example:admin",
          "reason": "X",
        },
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
        "subjectBlobCids": Array [],
      },
    ],
    "currentAction": Object {
      "action": "com.atproto.admin.defs#takedown",
      "id": 3,
    },
    "reports": Array [
      Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "id": 2,
        "reason": "defamation",
        "reasonType": "com.atproto.moderation.defs#reasonOther",
        "reportedBy": "user(1)",
        "resolvedByActionIds": Array [],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
      },
      Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "id": 1,
        "reasonType": "com.atproto.moderation.defs#reasonSpam",
        "reportedBy": "user(2)",
        "resolvedByActionIds": Array [],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
      },
    ],
  },
  "repo": Object {
    "account": Object {
      "email": "alice@test.com",
    },
    "did": "user(0)",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {},
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(1)",
          },
          "size": 3976,
        },
        "description": "its me!",
        "displayName": "ali",
      },
    ],
  },
  "uri": "record(0)",
  "value": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "text": "hey there",
  },
}
`;
